<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2017 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="180dp"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:id="@+id/sheet_new_tab"
        style="@style/Theme.Jelly.BottomSheetLayout">

        <ImageView
            style="@style/Theme.Jelly.BottomSheetIcon"
            android:src="@drawable/ic_new_tab" />

        <TextView
            style="@style/Theme.Jelly.BottomSheetText"
            android:text="@string/menu_in_new_tab" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_share"
        style="@style/Theme.Jelly.BottomSheetLayout">

        <ImageView
            style="@style/Theme.Jelly.BottomSheetIcon"
            android:src="@drawable/ic_share" />

        <TextView
            style="@style/Theme.Jelly.BottomSheetText"
            android:text="@string/menu_share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_favourite"
        style="@style/Theme.Jelly.BottomSheetLayout">

        <ImageView
            style="@style/Theme.Jelly.BottomSheetIcon"
            android:src="@drawable/ic_favorite_add" />

        <TextView
            style="@style/Theme.Jelly.BottomSheetText"
            android:text="@string/menu_fav_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sheet_download"
        style="@style/Theme.Jelly.BottomSheetLayout"
        android:visibility="gone">

        <ImageView
            style="@style/Theme.Jelly.BottomSheetIcon"
            android:src="@drawable/ic_download" />

        <TextView
            style="@style/Theme.Jelly.BottomSheetText"
            android:text="@string/menu_download" />
    </LinearLayout>
</LinearLayout>
