<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2017-2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/sslCertificateInfoDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ssl_cert_dialog_title"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <!-- SSL Trust -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ssl_cert_dialog_trust"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trusted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssl_cert_dialog_trusted"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <!-- Domain Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ssl_cert_dialog_domain"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <!-- Issued To -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ssl_cert_dialog_issued_to"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedToCnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedToOView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedToUnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <!-- Issued By -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ssl_cert_dialog_issued_by"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedByCnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedByOView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedByUnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <!-- Period of Validity -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ssl_cert_dialog_validity"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedOnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/expiresOnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dismissButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/ssl_cert_dialog_dismiss" />

</LinearLayout>
